# distributed_system_upstart

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: demo.launch  machines.launch
param/: master.yaml  system_analyzer_demo.yaml
scripts/: config.py  distributed_ros_master  distributed_ros_slave  system_diagnostics_node
